--- a/app/src/main/res/layout/exam_list_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/exam_list_bottom_sheet_dialog.xml
@@ -1,45 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-     xmlns:android="http://schemas.android.com/apk/res/android"
-     android:layout_height="match_parent"
-     android:layout_width="match_parent"
-     android:orientation="vertical">
-
-    <TextView
-         android:layout_height="48dp"
-         android:layout_width="match_parent"
-         android:gravity="center"
-         android:textSize="16sp"
-         android:text="考试列表" />
-
-    <androidx.recyclerview.widget.RecyclerView
-         android:layout_height="0dp"
-         android:layout_width="match_parent"
-         android:layout_weight="1"
-         android:id="@+id/recyclerView"
-         android:overScrollMode="never" />
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
 
     <LinearLayout
-         android:layout_height="wrap_content"
-         android:layout_width="match_parent"
-         android:orientation="horizontal"
-         android:paddingHorizontal="10dp">
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:orientation="vertical">
 
-        <com.google.android.material.button.MaterialButton
-             android:layout_height="wrap_content"
-             android:layout_width="0dp"
-             android:layout_marginEnd="8dp"
-             android:layout_weight="1"
-             android:id="@+id/enter_id"
-             android:text="输入examid" />
+        <TextView
+            android:layout_height="48dp"
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:text="考试列表" />
 
-        <com.google.android.material.button.MaterialButton
-             android:layout_height="wrap_content"
-             android:layout_width="0dp"
-             android:layout_weight="1"
-             android:id="@+id/getallexam"
-             android:text="一键获取全部考试" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:id="@+id/recyclerView"
+            android:overScrollMode="never" />
 
     </LinearLayout>
 
-</LinearLayout>
+   <com.google.android.material.floatingactionbutton.FloatingActionButton
+    android:id="@+id/floating_button"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="45dp"
+    android:layout_marginRight="20dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:srcCompat="@drawable/ic_up" />
+
+<com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+    android:id="@+id/edit_fab"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp"
+    android:layout_marginRight="20dp"
+    android:text="输入examid"                
+    app:icon="@drawable/ic_edit"          
+    app:layout_constraintBottom_toTopOf="@id/floating_button"
+    app:layout_constraintRight_toRightOf="parent" />
+
+<com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+    android:id="@+id/load_fab"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp"
+    android:layout_marginRight="20dp"
+    android:text="一键获取全部考试"            
+    app:icon="@drawable/ic_load"            
+    app:layout_constraintBottom_toTopOf="@id/edit_fab"
+    app:layout_constraintRight_toRightOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
